force-app/main/default/objects/ID_Information__c/ID_Information__c.object-meta.xml
<CustomObject>
    <description>This is used to store information extracted key information about an ID number and a count of searches for a given ID number so that we can track how often the specific ID number is queried.</description>
    <label>ID Information</label>
    <nameField>
        <label>ID Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>