force-app/main/default/objects/ID_Information__c/fields/SA_Citizen__c.field-meta.xml
<CustomField>
    <fullName>SA_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Person&apos;s Citizenship status</description>
    <label>SA Citizen</label>
    <type>Checkbox</type>
</CustomField>