force-app/main/default/objects/ID_Information__c/fields/Search_Count__c.field-meta.xml
<CustomField>
    <fullName>Search_Count__c</fullName>
    <description>Total Searches against the ID Number</description>
    <label>Search Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>