force-app/main/default/objects/ID_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Gender__c</columns>
    <columns>SA_Citizen__c</columns>
    <columns>Search_Count__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>